@@ -1,7 +1,8 @@
 package com.mendes.library.controller;
 
 import com.mendes.library.model.Author;
-import com.mendes.library.model.DTO.AuthorDTO.AuthorDTO;
+import com.mendes.library.model.DTO.AuthorDTO.AuthorRequest;
+import com.mendes.library.model.DTO.AuthorDTO.AuthorResponse;
 import com.mendes.library.service.AuthorService;
 import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
@@ -26,8 +27,6 @@ public class AuthorController {
 
     private final AuthorService authorService;
 
-    private final Logger logger = LoggerFactory.getLogger(AuthorController.class);
-
     @Autowired
     public AuthorController(AuthorService authorService) {
         this.authorService = authorService;
@@ -35,13 +34,13 @@ public class AuthorController {
 
     @PreAuthorize("hasAnyAuthority('AUTHOR_VIEW', 'ADMIN')")
     @GetMapping("/find/all")
-    public Page<AuthorDTO> findAllAuthors(@PageableDefault(size = 10, sort = "id", direction = Sort.Direction.DESC) Pageable pageable) {
-        logger.info("Consultando todos autores");
+    public Page<AuthorResponse> findAllAuthors(@PageableDefault(size = 10, sort = "id", direction = Sort.Direction.DESC) Pageable pageable) {
+        log.info("Consultando todos autores");
         var page = authorService.findAllAuthors(pageable);
         var content = page.getContent()
                 .stream()
-                .map(object -> authorService.convertEntityToDto(object))
-                .collect(Collectors.toList());
+                .map(authorService::convertEntityToDto)
+                .toList();
 
         return new PageImpl<>(content, page.getPageable(), page.getTotalElements());
     }
@@ -49,33 +48,33 @@ public class AuthorController {
 
     @PreAuthorize("hasAnyAuthority('AUTHOR_VIEW', 'ADMIN')")
     @GetMapping("/find/{id}")
-    public AuthorDTO findById(@PathVariable Long id) {
-        logger.info("Consultando autor (ID = {})", id);
-        Author object = authorService.findById(id);
-        return authorService.convertEntityToDto(object);
+    public AuthorResponse findById(@PathVariable Long id) {
+        log.info("Consultando autor (ID = {})", id);
+        var author = authorService.findById(id);
+        return authorService.convertEntityToDto(author);
     }
 
     @PreAuthorize("hasAnyAuthority('AUTHOR_INSERT', 'ADMIN')")
     @PostMapping("/insert")
     @ResponseStatus(HttpStatus.CREATED)
-    public AuthorDTO insertAuthor(@Valid @RequestBody AuthorDTO objectDTO) {
-        log.info("Cadastrando novo autor (Nome = {})", objectDTO.getName());
-        Author objectRequest = authorService.convertDtoToEntity(objectDTO);
-        Author object = authorService.insertAuthor(objectRequest);
-        log.info("Autor cadastrado com sucesso (ID = {})", object.getId());
-        return authorService.convertEntityToDto(object);
+    public AuthorResponse insertAuthor(@Valid @RequestBody AuthorRequest authorRequest) {
+        log.info("Cadastrando novo autor (Nome = {})", authorRequest.getName());
+        var authorEntity = authorService.convertDtoToEntity(authorRequest);
+        var author = authorService.insertAuthor(authorEntity);
+        log.info("Autor cadastrado com sucesso (ID = {})", author.getId());
+        return authorService.convertEntityToDto(author);
     }
 
 
     @PreAuthorize("hasAnyAuthority('AUTHOR_UPDATE', 'ADMIN')")
     @PutMapping("/update/{id}")
     @ResponseStatus(HttpStatus.OK)
-    public AuthorDTO updateAuthor(@Valid @RequestBody AuthorDTO objectDTO, @PathVariable Long id) {
+    public AuthorResponse updateAuthor(@Valid @RequestBody AuthorRequest authorRequest, @PathVariable Long id) {
         log.info("Atualizando autor (ID = {})", id);
-        Author objectRequest = authorService.convertDtoToEntity(objectDTO);
-        Author object = authorService.updateAuthor(id, objectRequest);
+        var authorEntity = authorService.convertDtoToEntity(authorRequest);
+        var author = authorService.updateAuthor(id, authorEntity);
         log.info("Autor atualizado com sucesso (ID = {})", id);
-        return authorService.convertEntityToDto(object);
+        return authorService.convertEntityToDto(author);
     }
 
     @PreAuthorize("hasAnyAuthority('AUTHOR_DELETE', 'ADMIN')")
