@@ -1,6 +1,7 @@
 package com.mendes.library.controller;
 
-import com.mendes.library.model.DTO.PublisherDTO.PublisherDTO;
+import com.mendes.library.model.DTO.PublisherDTO.PublisherRequest;
+import com.mendes.library.model.DTO.PublisherDTO.PublisherResponse;
 import com.mendes.library.model.Publisher;
 import com.mendes.library.service.PublisherService;
 import lombok.extern.slf4j.Slf4j;
@@ -31,48 +32,53 @@ public class PublisherController {
 
     @PreAuthorize("hasAnyAuthority('PUBLISHER_VIEW', 'ADMIN')")
     @GetMapping("/find/all")
-    public Page<PublisherDTO> findAllPublishers(@PageableDefault(size = 10, sort = "id", direction = Sort.Direction.DESC) Pageable pageable) {
+    public Page<PublisherResponse> findAllPublishers(@PageableDefault(size = 10, sort = "id", direction = Sort.Direction.DESC) Pageable pageable) {
         var page = publisherService.findAllPublishers(pageable);
 
         var content = page.getContent()
                 .stream()
-                .map(object -> publisherService.convertEntityToDto(object))
-                .collect(Collectors.toList());
+                .map(publisherService::convertEntityToDto)
+                .toList();
 
         return new PageImpl<>(content, page.getPageable(), page.getTotalElements());
     }
 
     @PreAuthorize("hasAnyAuthority('PUBLISHER_VIEW', 'ADMIN')")
     @GetMapping("/find/{id}")
-    public PublisherDTO findById(@PathVariable Long id) {
-        Publisher object = publisherService.findById(id);
-        return publisherService.convertEntityToDto(object);
+    public PublisherResponse findById(@PathVariable Long id) {
+        log.info("Consultando a editora (ID = {})", id);
+        var publisher = publisherService.findById(id);
+        return publisherService.convertEntityToDto(publisher);
     }
 
     @PreAuthorize("hasAnyAuthority('PUBLISHER_INSERT', 'ADMIN')")
     @PostMapping("/insert")
     @ResponseStatus(HttpStatus.CREATED)
-    public PublisherDTO insertPublisher(@Valid @RequestBody PublisherDTO objectDTO) {
-        log.info(" inserting a new publisher: {} ", objectDTO.getName());
-        Publisher objectRequest = publisherService.convertDtoToEntity(objectDTO);
-        Publisher object = publisherService.insertPublisher(objectRequest);
-        return publisherService.convertEntityToDto(object);
+    public PublisherResponse insertPublisher(@Valid @RequestBody PublisherRequest publisherRequest) {
+        log.info("Cadastrando nova editora: {} ", publisherRequest.getName());
+        var publisherEntity = publisherService.convertDtoToEntity(publisherRequest);
+        var publisher = publisherService.insertPublisher(publisherEntity);
+        log.info("Editora cadastrada com sucesso (ID = {})", publisher.getId());
+        return publisherService.convertEntityToDto(publisher);
     }
 
     @PreAuthorize("hasAnyAuthority('PUBLISHER_UPDATE', 'ADMIN')")
     @PutMapping("/update/{id}")
     @ResponseStatus(HttpStatus.OK)
-    public PublisherDTO updatePublisher(@Valid @RequestBody PublisherDTO objectDTO, @PathVariable Long id) {
-        log.info(" updating publisher of id: {} ", id);
-        Publisher objectRequest = publisherService.convertDtoToEntity(objectDTO);
-        Publisher object = publisherService.updatePublisher(id, objectRequest);
-        return publisherService.convertEntityToDto(object);
+    public PublisherResponse updatePublisher(@Valid @RequestBody PublisherRequest publisherRequest, @PathVariable Long id) {
+        log.info("Atualizando a editora: {} ", id);
+        var publisherEntity = publisherService.convertDtoToEntity(publisherRequest);
+        var publisher = publisherService.updatePublisher(id, publisherEntity);
+        log.info("Editora atualizada com sucesso (ID = {})", id);
+        return publisherService.convertEntityToDto(publisher);
     }
 
     @PreAuthorize("hasAnyAuthority('PUBLISHER_DELETE', 'ADMIN')")
     @DeleteMapping("/delete/{id}")
     @ResponseStatus(HttpStatus.OK)
-    public void deleteAuthor(@PathVariable Long id) {
-        publisherService.deletePublisher(id);
+    public void deletePublisher(@PathVariable Long id) {
+        log.info("Deletando editora (ID = {})", id);
+        this.publisherService.deletePublisher(id);
+        log.info("Editora deletada com sucesso (ID = {})", id);
     }
 }
